--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.csproj
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter/Microsoft.Azure.Devices.Edge.Hub.MqttBrokerAdapter.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\..\netcoreappVersion.props" />
+
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <Configurations>Debug;Release;CheckInBuild</Configurations>
     <HighEntropyVA>true</HighEntropyVA>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
