--- a/builds/e2e/e2e.yaml
+++ b/builds/e2e/e2e.yaml
@@ -37,7 +37,7 @@ jobs:
     steps:
     - task: CmdLine@2
       inputs:
-        script: 'sudo find . -type f -group root -execdir rm {} + && sudo find . -type d -group root -print0 | xargs -0 /bin/rm -rf' 
+        script: 'sudo find . -type f -group root -execdir rm {} + && sudo find . -type d -group root -print0 | sudo xargs -0 /bin/rm -rf' 
       displayName: Clean up files (as sudo)
 
     - template: templates/e2e-setup.yaml
