Key Service; Identity Service launch from iotedged

--- a/edgelet/Cargo.toml
+++ b/edgelet/Cargo.toml
@@ -7,6 +7,8 @@ members = [
     "edgelet-hsm",
     "edgelet-http",
     "edgelet-http-external-provisioning",
+    "edgelet-http-identity",
+    "edgelet-http-keyservice",
     "edgelet-http-mgmt",
     "edgelet-http-workload",
     "edgelet-iothub",
@@ -18,12 +20,14 @@ members = [
     "hsm-rs",
     "hsm-sys",
     "hyper-named-pipe",
+    "identity",
     "iotedge",
     "iotedged",
     "iotedged-eventlog-messages",
     "iotedge-diagnostics",
     "iotedge-proxy",
     "iothubservice",
+    "keyservice",
     "management",
     "mini-sntp",
     "provisioning",
