--- a/edgelet/api/identityServiceVersion_2020_06_01.yaml
+++ b/edgelet/api/identityServiceVersion_2020_06_01.yaml
@@ -37,6 +37,7 @@ definitions:
         $ref: '#/definitions/IdentitySpec'
     required:
       - type
+      - spec
   IdentitySpec:
     type: object
     description: The identity specification.
