--- a/builds/e2e/templates/connectivity-deploy.yaml
+++ b/builds/e2e/templates/connectivity-deploy.yaml
@@ -99,6 +99,7 @@ steps:
           -edgeRuntimeBuildNumber "${{ parameters['edgeRuntime.buildNumber'] }}" \
           -customEdgeAgentImage "${{ parameters['customEdgeAgent.image'] }}" \
           -customEdgeHubImage "${{ parameters['customEdgeHub.image'] }}" \
+          -runtimeLogLevel "${{ parameters['runtimeLogLevel'] }}" \
           -testInfo "$testInfo" \
           -waitForTestComplete \
           -cleanAll
