--- a/builds/templates/dotnet3-globaljson.yaml
+++ b/builds/templates/dotnet3-globaljson.yaml
@@ -1,4 +1,5 @@
 steps:
-  - task: DotNetCoreCLI@2
+  - task: Bash@3
     inputs:
-      command: 'new globaljson --sdk-version 3.1.202'
+      targetType: 'inline'
+      script: 'dotnet new globaljson --sdk-version 3.1.202'
