--- a/builds/templates/dotnet3-globaljson.yaml
+++ b/builds/templates/dotnet3-globaljson.yaml
@@ -1,5 +1,6 @@
 steps:
   - task: Bash@3
+    displayName: 'Use dotnet 3'
     inputs:
       targetType: 'inline'
       script: 'dotnet new globaljson --sdk-version 3.1.202'
