--- a/builds/e2e/templates/connectivity-deploy.yaml
+++ b/builds/e2e/templates/connectivity-deploy.yaml
@@ -29,7 +29,7 @@ parameters:
   edgeRuntime.buildNumber: ''
   customEdgeAgent.image: ''
   customEdgeHub.image: ''
-  runtimeLogLevel: ''
+  test.runtimeLogLevel: ''
 
 steps:
   - task: CopyFiles@2
@@ -100,7 +100,7 @@ steps:
           -edgeRuntimeBuildNumber "${{ parameters['edgeRuntime.buildNumber'] }}" \
           -customEdgeAgentImage "${{ parameters['customEdgeAgent.image'] }}" \
           -customEdgeHubImage "${{ parameters['customEdgeHub.image'] }}" \
-          -runtimeLogLevel "${{ parameters['runtimeLogLevel'] }}" \
+          -testRuntimeLogLevel "${{ parameters['test.runtimeLogLevel'] }}" \
           -testInfo "$testInfo" \
           -waitForTestComplete \
           -cleanAll
