--- a/edgelet/contrib/config/windows/config.yaml
+++ b/edgelet/contrib/config/windows/config.yaml
@@ -290,7 +290,7 @@ connect:
 #     management_uri - used by the Edge Agent and 'iotedge' CLI to start,
 #                      stop, and manage modules
 #     workload_uri   - used by modules to retrieve tokens and certificates
-#     identity_uri   - used by host-level processes to retrieve identity information
+#     identityservice_uri   - used by host-level processes to retrieve identity information
 #     keyservice_uri - used by host-level processes to perform identity key operations
 #
 # The following uri schemes are supported:
@@ -309,7 +309,7 @@ connect:
 listen:
   management_uri: "unix:///C:/ProgramData/iotedge/mgmt/sock"
   workload_uri: "unix:///C:/ProgramData/iotedge/workload/sock"
-  identity_uri: "unix:///C:/ProgramData/idservice/identity/sock"
+  identityservice_uri: "unix:///C:/ProgramData/idservice/identity/sock"
   keyservice_uri: "unix:///C:/ProgramData/keyservice/keyservice/sock"
 
 ###############################################################################
