--- a/edgelet/edgelet-docker/config/windows/default.yaml
+++ b/edgelet/edgelet-docker/config/windows/default.yaml
@@ -18,7 +18,7 @@ connect:
 listen:
   management_uri: "unix:///C:/ProgramData/iotedge/mgmt/sock"
   workload_uri: "unix:///C:/ProgramData/iotedge/workload/sock"
-  identity_uri: "unix:///C:/ProgramData/idservice/identity/sock"
+  identityservice_uri: "unix:///C:/ProgramData/idservice/identity/sock"
   keyservice_uri: "unix:///C:/ProgramData/keyservice/keyservice/sock"
 
 homedir: "C:\\ProgramData\\iotedge"
