Revert "Update WorkloadClient with the configurable stale socket error code"
This reverts commit e5d417cc278aede083a46a98608c64d6795032ee.

--- a/edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Service/appsettings_agent.json
+++ b/edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Service/appsettings_agent.json
@@ -25,6 +25,5 @@
   "EdgeModuleVolumeName": "",
   "EdgeHubVolumePath": "",
   "EdgeModuleVolumePath": "",
-  "ConfigRefreshFrequencySecs": "3600",
-  "WorkloadStaleSocketExceptionCode": 111
+  "ConfigRefreshFrequencySecs": "3600"
 }
