--- a/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
+++ b/edge-hub/src/Microsoft.Azure.Devices.Edge.Hub.Service/appsettings_hub.json
@@ -73,6 +73,5 @@
   "AuthenticationMode": "CloudAndScope",
   "DeviceScopeCacheRefreshRateSecs": 3600,
   "CloudConnectionIdleTimeoutSecs": 3600,
-  "CloseCloudConnectionOnIdleTimeout": true,
-  "WorkloadStaleSocketExceptionCode": 111
+  "CloseCloudConnectionOnIdleTimeout": true
 }
