Install certs in Agent

--- a/edge-agent/docker/linux/amd64/Dockerfile
+++ b/edge-agent/docker/linux/amd64/Dockerfile
@@ -9,6 +9,9 @@ ARG EXE_DIR=.
 RUN apk update && \
     apk add --no-cache snappy
 
+ARG EDGEAGENTUSER_ID=1000	
+RUN adduser -Ds /bin/sh -u ${EDGEAGENTUSER_ID} edgeagentuser 
+
 # Install RocksDB
 COPY --from=builder publish/* /usr/local/lib/
 
