--- a/edgelet/edgelet-docker/config/windows/default.yaml
+++ b/edgelet/edgelet-docker/config/windows/default.yaml
@@ -18,6 +18,8 @@ connect:
 listen:
   management_uri: "unix:///C:/ProgramData/iotedge/mgmt/sock"
   workload_uri: "unix:///C:/ProgramData/iotedge/workload/sock"
+  identityservice_uri: "unix:///C:/ProgramData/iotedge/identity/sock"
+  keyservice_uri: "unix:///C:/ProgramData/iotedge/keyservice/sock"
 
 homedir: "C:\\ProgramData\\iotedge"
 
