--- a/kubernetes/charts/edge-kubernetes/templates/iotedged-deployment.yaml
+++ b/kubernetes/charts/edge-kubernetes/templates/iotedged-deployment.yaml
@@ -45,13 +45,11 @@ spec:
             mountPath: "/etc/edgecerts"
             readOnly: true
           {{- end}}
-          {{- if .trusted_ca_certs }}
-          - name: ca-edge-certs
-            mountPath: "/etc/ssl/certs/{{.trusted_ca_certs}}"
-            subPath: "{{.trusted_ca_certs}}"
-            readOnly: true
           {{- end}}
-          {{- end}}
+          {{- if .Values.iotedged.data.useHostTrust }}
+          - name: ca-edge-host-trust
+            mountPath: "/etc/ssl/certs"
+          {{- end }}
           {{- with .Values.provisioning.authentication }}
           {{- if .identitySecret }}
           - name: edge-authentication
@@ -133,6 +131,12 @@ spec:
             path: identity_pk
       {{- end}}
       {{- end}}
+      {{- if .Values.iotedged.data.useHostTrust }}
+      - name: ca-edge-host-trust
+        hostPath:
+          path: /etc/ssl/certs
+          type: Directory
+      {{- end}}
       {{- with .Values.iotedged.certificates }}
       {{- if .secret }}
       {{- /*
@@ -148,9 +152,7 @@ spec:
             path: device_ca_pk
           - key: {{ .trusted_ca_certs | default "trusted_ca_certs" }}
             path: trusted_ca_certs
-      - name: ca-edge-certs
-        secret:
-          secretName: {{ .secret }}
+
       {{- end}}
       {{- else}}
       {{- /*
