--- a/kubernetes/charts/edge-kubernetes/values.yaml
+++ b/kubernetes/charts/edge-kubernetes/values.yaml
@@ -19,6 +19,11 @@ iotedged:
   data:
     enableGetNodesRBAC: true
     targetPath: /var/lib/iotedge
+    # Normally the iotedged is running as a host process, and has access to 
+    # the host's trusted CA certificates.  Use this options to allow the 
+    # iotedged deployment to use the host OS's /etc/ssl/certs 
+    # useHostTrust: false
+    #
     # In order to benefit from HA, at a minimum the data location for iotedged
     # should be backed by a persistent volume. 
     # User may create a PersistentVolumeClaim and provide the name only here. Alternatively.
