--- a/edge-hub/docker/linux/amd64/Dockerfile
+++ b/edge-hub/docker/linux/amd64/Dockerfile
@@ -7,18 +7,18 @@ ARG BASE_IMAGE=ekidd/rust-musl-builder:stable
 # Our first FROM statement declares the build environment.
 FROM ${BASE_IMAGE} AS broker-builder
 
-# Add our source code.
+# Add source code for mqtt broker and watchdog.
 ADD ./mqtt ./mqtt
+ADD ./watchdog ./watchdog
 
 RUN sudo chown -R rust:rust ../src
 
-# Build our application.
+#Build mqtt broker and watchdog.
 RUN cargo build --release --manifest-path ./mqtt/mqttd/Cargo.toml --no-default-features \
     && strip /home/rust/src/mqtt/target/x86_64-unknown-linux-musl/release/mqttd
 
-RUN ls
-
-RUN ls ./mqtt
+RUN cargo build --release --manifest-path ./watchdog/linux/Cargo.toml --no-default-features \
+    && strip /home/rust/src/watchdog/linux/target/x86_64-unknown-linux-musl/release/watchdog
 
 FROM azureiotedge/azureiotedge-runtime-base:1.2-linux-amd64 as hub-builder
 
@@ -43,6 +43,10 @@ COPY --from=broker-builder \
     /home/rust/src/mqtt/target/x86_64-unknown-linux-musl/release/mqttd \
     /usr/local/bin/
 
+COPY --from=broker-builder \
+    /home/rust/src/watchdog/linux/target/x86_64-unknown-linux-musl/release/watchdog \
+    /usr/local/bin/
+
 # Add the CAP_NET_BIND_SERVICE capability to the dotnet binary because	
 # we are starting Edge Hub as a non-root user	
 RUN setcap 'cap_net_bind_service=+ep' /usr/share/dotnet/dotnet	
@@ -52,7 +56,9 @@ COPY --from=hub-builder publish/* /usr/local/lib/
 
 WORKDIR /app	
 
-COPY $EXE_DIR/ ./	
+# Copy edge hub artifacts and remove unnecessary items, leaving just edge hub core dlls
+COPY $EXE_DIR/ ./
+RUN rm -rf docker watchdog mqtt
 
 # Expose MQTT, AMQP and HTTPS ports	
 EXPOSE 8883/tcp	
@@ -62,4 +68,4 @@ EXPOSE 443/tcp
 USER edgehubuser	
 
 CMD echo "$(date --utc +"%Y-%m-%d %H:%M:%S %:z") Starting Edge Hub" && \	
-    exec /usr/bin/dotnet Microsoft.Azure.Devices.Edge.Hub.Service.dll
+    /usr/local/bin/watchdog
