Identity and key service APIs (#3000)
- Add identity service and key service API implementations
- Launch both services from iotedged
- UTs
- Configuration for new identity and key services
- Packaging changes

--- a/edgelet/contrib/config/linux/config.yaml
+++ b/edgelet/contrib/config/linux/config.yaml
@@ -288,6 +288,8 @@ connect:
 #     management_uri - used by the Edge Agent and 'iotedge' CLI to start,
 #                      stop, and manage modules
 #     workload_uri   - used by modules to retrieve tokens and certificates
+#     identityservice_uri   - used by host-level processes to retrieve identity information
+#     keyservice_uri - used by host-level processes to perform identity key operations
 #
 # The following uri schemes are supported:
 #     http - listen over TCP
@@ -309,6 +311,8 @@ connect:
 listen:
   management_uri: "unix:///var/lib/iotedge/mgmt.sock"
   workload_uri: "unix:///var/lib/iotedge/workload.sock"
+  identityservice_uri: "unix:///var/lib/iotedge/idservice.sock"
+  keyservice_uri: "unix:///var/lib/iotedge/keyservice.sock"
 
 ###############################################################################
 # Home Directory
