--- a/builds/misc/mqtt-perf.yaml
+++ b/builds/misc/mqtt-perf.yaml
@@ -18,7 +18,7 @@ trigger: none
 pr: none
 schedules:
   - cron: "0 6 * * *"
-    displayName: Daily at 11 PM PDT
+    displayName: Pacific Time (UTC-7) Nightly Build
     branches:
       include:
       - iiot
