--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -216,6 +216,9 @@ jobs:
       - powershell: edgelet/build/windows/build-diagnostics.ps1 -BuildConfiguration $(Build.Configuration)
         displayName: Build iotedge-diagnostics
 
+      - powershell: ../../mqtt/build/windows/build.ps1
+        displayName: Build mqtt broker
+
       - powershell: scripts/windows/build/Create-ArtifactInfo.ps1 -outputFolder '$(Build.BinariesDirectory)/publish' -buildNumber $(Build.BuildNumber)
         displayName: 'Create Artifact Info File'
 
