--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -209,7 +209,7 @@ jobs:
       - script: echo $(registry.password)|docker login "edgebuilds.azurecr.io" -u "$(registry.user)" --password-stdin
         displayName: Docker Login
 
-      - powershell: ../../mqtt/build/windows/build.ps1
+      - powershell: ../../mqtt/build/windows/build.ps1 -Configuration:"$(Build.Configuration)"
         displayName: Build mqtt broker
 
       - powershell: scripts/windows/build/Publish-Branch.ps1 -Configuration:"$(Build.Configuration)" -PublishTests:$False -UpdateVersion
