--- a/samples/dotnet/EdgeDownstreamDevice/EdgeDownstreamDevice.csproj
+++ b/samples/dotnet/EdgeDownstreamDevice/EdgeDownstreamDevice.csproj
@@ -15,6 +15,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.20.3-asc-edge" />
+	<PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.23.2" />
   </ItemGroup>
 </Project>
