--- a/builds/misc/images.yaml
+++ b/builds/misc/images.yaml
@@ -24,6 +24,12 @@ jobs:
         name: Build C# artifacts
         displayName: Build ($(Build.Configuration))
 
+      - template: templates/build-broker-watchdog.yaml
+        displayName: 'Cross compile broker for all platforms'
+
+      - template: templates/copy-broker-watchdog-artifacts.yaml
+        displayName: 'Copy broker artifacts to edgehub publish folder'
+
       - script: scripts/linux/createArtifactInfo.sh --output-folder '$(Build.BinariesDirectory)/publish' --build-number $(Build.BuildNumber)
         displayName: 'Create Artifact Info File'
 
@@ -191,180 +197,6 @@ jobs:
       targetArch: aarch64
 
 ################################################################################
-  - job: windows
-################################################################################
-    displayName: Windows
-    timeoutInMinutes: 90
-    pool:
-      name: Azure-IoT-Edge-Core
-      demands:
-        - Build-Image -equals true
-        - win-rs5
-    workspace:
-      clean: all
-    steps:
-      - template: ../templates/install-dotnet2.yaml
-      - template: ../templates/install-dotnet3.yaml
-
-      - script: echo $(registry.password)|docker login "edgebuilds.azurecr.io" -u "$(registry.user)" --password-stdin
-        displayName: Docker Login
-
-      - powershell: ../../mqtt/build/windows/build.ps1 -Release
-        displayName: Build mqtt broker
-
-      - powershell: scripts/windows/build/Publish-Branch.ps1 -Configuration:"$(Build.Configuration)" -PublishTests:$False -UpdateVersion
-        name: build
-        displayName: Build ($(Build.Configuration))
-
-      - powershell: edgelet/build/windows/build-diagnostics.ps1 -BuildConfiguration $(Build.Configuration)
-        displayName: Build iotedge-diagnostics
-
-      - powershell: scripts/windows/build/Create-ArtifactInfo.ps1 -outputFolder '$(Build.BinariesDirectory)/publish' -buildNumber $(Build.BuildNumber)
-        displayName: 'Create Artifact Info File'
-
-      - task: PublishBuildArtifacts@1
-        displayName: 'Publish Artifacts'
-        inputs:
-          PathtoPublish: '$(Build.BinariesDirectory)/publish'
-          ArtifactName: 'core-windows'
-
-      # azureiotedge-diagnostics
-      - template: templates/image-windows.yaml
-        parameters:
-          name: azureiotedge-diagnostics
-          imageName: azureiotedge-diagnostics
-          project: azureiotedge-diagnostics
-
-      # Edge Agent
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Edge Agent
-          imageName: azureiotedge-agent
-          project: Microsoft.Azure.Devices.Edge.Agent.Service
-
-      # Edge Hub
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Edge Hub
-          imageName: azureiotedge-hub
-          project: Microsoft.Azure.Devices.Edge.Hub.Service
-
-      # Simulated Temperature Sensor
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Temperature Sensor
-          imageName: azureiotedge-simulated-temperature-sensor
-          project: SimulatedTemperatureSensor
-
-      # Temperature Filter
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Temperature Filter
-          imageName: azureiotedge-temperature-filter
-          project: TemperatureFilter
-
-      # Load Gen
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Load Gen
-          imageName: azureiotedge-load-gen
-          project: load-gen
-
-      # Test Analyzer
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Test Analyzer
-          imageName: azureiotedge-analyzer
-          project: TestAnalyzer
-          
-      # Functions Sample
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Functions Sample
-          imageName: azureiotedge-functions-filter
-          project: EdgeHubTriggerCSharp
-
-      # Direct Method Sender
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Direct Method Sender
-          imageName: azureiotedge-direct-method-sender
-          project: DirectMethodSender
-
-      # Direct Method Receiver
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Direct Method Receiver
-          imageName: azureiotedge-direct-method-receiver
-          project: DirectMethodReceiver
-          
-      # Metrics Validator
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Metrics Validator
-          imageName: azureiotedge-metrics-validator
-          project: MetricsValidator
-
-     # Module Restarter
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Module Restarter
-          imageName: azureiotedge-module-restarter
-          project: ModuleRestarter
-
-     # Twin Tester
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Twin Tester
-          imageName: azureiotedge-twin-tester
-          project: TwinTester
-
-     # Relayer
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Relayer
-          imageName: azureiotedge-relayer
-          project: Relayer
-
-     # Metrics Collector
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Metrics Collector
-          imageName: azureiotedge-metrics-collector
-          project: MetricsCollector
-
-     # TestResultCoordinator
-      - template: templates/image-windows.yaml
-        parameters:
-          name: TestResultCoordinator
-          imageName: azureiotedge-test-result-coordinator
-          project: TestResultCoordinator
-
-     # Deployment Tester
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Deployment Tester
-          imageName: azureiotedge-deployment-tester
-          project: DeploymentTester
-
-     # EdgeHub Restart Tester
-      - template: templates/image-windows.yaml
-        parameters:
-          name: EdgeHubRestartTester
-          imageName: azureiotedge-edgehub-restart-tester
-          project: EdgeHubRestartTester
-
-     # Cloud To Device Message Tester
-      - template: templates/image-windows.yaml
-        parameters:
-          name: Cloud To Device Message Tester
-          imageName: azureiotedge-c2dmessage-tester
-          project: CloudToDeviceMessageTester
-
-      - powershell: docker system prune -a -f
-        displayName: Clean Machine
-
-################################################################################
   - job: manifest
 ################################################################################
     displayName: Manifest
@@ -375,7 +207,6 @@ jobs:
       - linux_rust_amd64
       - linux_rust_arm32
       - linux_rust_arm64
-      - windows
     variables:
       tags: "['latest']"
     steps:
