--- a/builds/misc/templates/copy-broker-watchdog-artifacts.yaml
+++ b/builds/misc/templates/copy-broker-watchdog-artifacts.yaml
@@ -5,6 +5,10 @@ steps:
   - bash: 'mkdir -p target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/mqtt/arm32'
   - bash: 'mkdir -p target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/mqtt/arm64'
 
+  - bash: 'mkdir -p target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/watchdog/amd64'
+  - bash: 'mkdir -p target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/watchdog/arm32'
+  - bash: 'mkdir -p target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/watchdog/arm64'
+
   - task: Bash@3
     displayName: Copy broker artifact - amd64
     inputs:
@@ -22,3 +26,21 @@ steps:
     inputs:
       filePath: scripts/linux/strip-and-copy-binary.sh
       arguments: --src mqtt/target/aarch64-unknown-linux-gnu/release/mqttd --dest target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/mqtt/arm64
+
+  - task: Bash@3
+    displayName: Copy watchdog artifact - amd64
+    inputs:
+      filePath: scripts/linux/strip-and-copy-binary.sh
+      arguments: --src edge-hub/watchdog/linux/target/release/watchdog --dest target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/watchdog/amd64
+
+  - task: Bash@3
+    displayName: Copy watchdog artifact - arm32
+    inputs:
+      filePath: scripts/linux/strip-and-copy-binary.sh
+      arguments: --src edge-hub/watchdog/linux/target/armv7-unknown-linux-gnueabihf/release/mqttd --dest target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/watchdog/arm32
+
+  - task: Bash@3
+    displayName: Copy watchdog artifact - arm64
+    inputs:
+      filePath: scripts/linux/strip-and-copy-binary.sh
+      arguments: --src edge-hub/watchdog/linux/target/aarch64-unknown-linux-gnu/release/mqttd --dest target/publish/Microsoft.Azure.Devices.Edge.Hub.Service/watchdog/arm64
