fix errors in copy script

--- a/edge-hub/docker/linux/amd64/Dockerfile
+++ b/edge-hub/docker/linux/amd64/Dockerfile
@@ -7,7 +7,7 @@ ENV RUST_LOG=info
 EXPOSE 1883/tcp
 EXPOSE 8883/tcp
 
-ADD ./watchdog/amd64/watchdog /usr/bin/local/watchdog
+ADD ./watchdog/amd64/watchdog /usr/local/bin/watchdog
 ADD ./mqtt/amd64/mqttd /usr/local/bin/mqttd
 
 ARG EXE_DIR=.	
