--- a/edge-hub/docker/linux/arm32v7/Dockerfile
+++ b/edge-hub/docker/linux/arm32v7/Dockerfile
@@ -1,7 +1,7 @@
 ARG base_tag=1.0.5-linux-arm32v7
 FROM azureiotedge/azureiotedge-hub-base:${base_tag}
 
-ADD ./watchdog/arm32/watchdog /usr/bin/local/watchdog
+ADD ./watchdog/arm32/watchdog /usr/local/bin/watchdog
 ADD ./mqtt/arm32/mqttd /usr/local/bin/mqttd
 
 ARG EXE_DIR=.
